Inclusão de enums